ran for 30 epochs

--- a/Yolo_Basic_3b.ipynb
+++ b/Yolo_Basic_3b.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -502,8 +502,70 @@
       "Epoch 3/30\n",
       "50000/50000 [==============================] - 92s 2ms/step - loss: 0.7550 - acc: 0.7347 - val_loss: 1.2166 - val_acc: 0.6120\n",
       "Epoch 4/30\n",
-      " 8960/50000 [====>.........................] - ETA: 1:12 - loss: 0.6124 - acc: 0.7853"
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.6383 - acc: 0.7773 - val_loss: 1.1869 - val_acc: 0.6431\n",
+      "Epoch 5/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.5432 - acc: 0.8124 - val_loss: 0.8809 - val_acc: 0.7194\n",
+      "Epoch 6/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.4677 - acc: 0.8395 - val_loss: 0.8651 - val_acc: 0.7341\n",
+      "Epoch 7/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.4010 - acc: 0.8601 - val_loss: 1.1692 - val_acc: 0.6802\n",
+      "Epoch 8/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.3509 - acc: 0.8779 - val_loss: 1.2499 - val_acc: 0.6442\n",
+      "Epoch 9/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.2994 - acc: 0.8965 - val_loss: 0.9080 - val_acc: 0.7435\n",
+      "Epoch 10/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.2514 - acc: 0.9136 - val_loss: 1.0383 - val_acc: 0.7227\n",
+      "Epoch 11/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.2174 - acc: 0.9235 - val_loss: 1.3607 - val_acc: 0.6772\n",
+      "Epoch 12/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.1911 - acc: 0.9334 - val_loss: 0.9053 - val_acc: 0.7626\n",
+      "Epoch 13/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.1556 - acc: 0.9457 - val_loss: 0.9380 - val_acc: 0.7605\n",
+      "Epoch 14/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.1405 - acc: 0.9508 - val_loss: 1.1026 - val_acc: 0.7315\n",
+      "Epoch 15/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.1463 - acc: 0.9495 - val_loss: 0.9415 - val_acc: 0.7728\n",
+      "Epoch 16/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.1123 - acc: 0.9617 - val_loss: 0.9172 - val_acc: 0.7814\n",
+      "Epoch 17/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.1057 - acc: 0.9625 - val_loss: 1.0468 - val_acc: 0.7632\n",
+      "Epoch 18/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0983 - acc: 0.9662 - val_loss: 1.1902 - val_acc: 0.7357\n",
+      "Epoch 19/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0901 - acc: 0.9681 - val_loss: 1.2359 - val_acc: 0.7556\n",
+      "Epoch 20/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0899 - acc: 0.9688 - val_loss: 1.1759 - val_acc: 0.7490\n",
+      "Epoch 21/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0780 - acc: 0.9733 - val_loss: 1.2641 - val_acc: 0.7378\n",
+      "Epoch 22/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0706 - acc: 0.9757 - val_loss: 1.0955 - val_acc: 0.7721\n",
+      "Epoch 23/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0695 - acc: 0.9761 - val_loss: 1.0969 - val_acc: 0.7612\n",
+      "Epoch 24/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0705 - acc: 0.9757 - val_loss: 1.1493 - val_acc: 0.7654\n",
+      "Epoch 25/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0592 - acc: 0.9798 - val_loss: 1.1109 - val_acc: 0.7771\n",
+      "Epoch 26/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0602 - acc: 0.9788 - val_loss: 1.1669 - val_acc: 0.7748\n",
+      "Epoch 27/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0616 - acc: 0.9784 - val_loss: 1.2577 - val_acc: 0.7530\n",
+      "Epoch 28/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0582 - acc: 0.9800 - val_loss: 1.1447 - val_acc: 0.7617\n",
+      "Epoch 29/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0548 - acc: 0.9814 - val_loss: 1.0692 - val_acc: 0.7854\n",
+      "Epoch 30/30\n",
+      "50000/50000 [==============================] - 92s 2ms/step - loss: 0.0529 - acc: 0.9822 - val_loss: 1.1771 - val_acc: 0.7593\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7ff9deadb6a0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -516,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -542,9 +604,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 10s 972us/step\n",
-      "Test loss: 1.2355702805519104\n",
-      "Test accuracy: 0.7692\n",
+      "10000/10000 [==============================] - 9s 896us/step\n",
+      "Test loss: 1.1770981562137603\n",
+      "Test accuracy: 0.7593\n",
       "Saved the model to disk\n"
      ]
     }
@@ -561,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -607,59 +669,14 @@
      "text": [
       "Saved the model to disk\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------\n",
-      "Exception happened during processing of request from ('::ffff:127.0.0.1', 44526, 0, 0)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python3.6/socketserver.py\", line 317, in _handle_request_noblock\n",
-      "    self.process_request(request, client_address)\n",
-      "  File \"/usr/lib/python3.6/socketserver.py\", line 348, in process_request\n",
-      "    self.finish_request(request, client_address)\n",
-      "  File \"/usr/lib/python3.6/socketserver.py\", line 361, in finish_request\n",
-      "    self.RequestHandlerClass(request, client_address, self)\n",
-      "  File \"/usr/lib/python3.6/socketserver.py\", line 696, in __init__\n",
-      "    self.handle()\n",
-      "  File \"/usr/lib/python3.6/http/server.py\", line 418, in handle\n",
-      "    self.handle_one_request()\n",
-      "  File \"/usr/lib/python3.6/http/server.py\", line 406, in handle_one_request\n",
-      "    method()\n",
-      "  File \"/usr/lib/python3.6/http/server.py\", line 639, in do_GET\n",
-      "    self.copyfile(f, self.wfile)\n",
-      "  File \"/usr/lib/python3.6/http/server.py\", line 800, in copyfile\n",
-      "    shutil.copyfileobj(source, outputfile)\n",
-      "  File \"/usr/lib/python3.6/shutil.py\", line 82, in copyfileobj\n",
-      "    fdst.write(buf)\n",
-      "  File \"/usr/lib/python3.6/socketserver.py\", line 775, in write\n",
-      "    self._sock.sendall(b)\n",
-      "ConnectionResetError: [Errno 104] Connection reset by peer\n",
-      "----------------------------------------\n"
-     ]
-    },
-    {
-     "ename": "MessageError",
-     "evalue": "ignored",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMessageError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-7fd61af6c08d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mfiles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Yolo_Basic_model.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/google/colab/files.py\u001b[0m in \u001b[0;36mdownload\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m    135\u001b[0m       \u001b[0;34m'port'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m       \u001b[0;34m'path'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 137\u001b[0;31m       \u001b[0;34m'name'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbasename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    138\u001b[0m   })\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/google/colab/output/_js.py\u001b[0m in \u001b[0;36meval_js\u001b[0;34m(script, ignore_result)\u001b[0m\n\u001b[1;32m     37\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mignore_result\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0m_message\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_reply_from_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequest_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mread_reply_from_input\u001b[0;34m(message_id, timeout_sec)\u001b[0m\n\u001b[1;32m     84\u001b[0m         reply.get('colab_msg_id') == message_id):\n\u001b[1;32m     85\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0;34m'error'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreply\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 86\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mMessageError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreply\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'error'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     87\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mreply\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mMessageError\u001b[0m: Error: Failed to download: "
-     ]
     }
    ],
    "source": [
-    "model.save_weights(\"Yolo_Basic_model2.h5\")\n",
+    "model.save_weights(\"Yolo_Basic_model3.h5\")\n",
     "print(\"Saved the model to disk\")\n",
-    "from google.colab import files\n",
+    "#from google.colab import files\n",
     "\n",
-    "files.download('Yolo_Basic_model.h5')"
+    "#files.download('Yolo_Basic_model.h5')"
    ]
   },
   {
